# peek

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: release.yml  trigger-scoop-call.yml  upload-to-r2.yml
HttpStatus/: FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  HttpStatus.csproj  Program.cs
HttpStatus/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
assets/: Info.plist
docs/: R2_SETUP.md  SEO_IMAGE.md
scripts/: CSharpHash.bat  CSharpHash.ps1  README.md  build-macos-app.sh  build.bat  build.cmd  build.sh  clean.cmd  convert-icon-to-icns.sh  create-release.ps1  deploy.sh  format-shell.sh  git-clean.cmd  resize-peek.ahk  run.bat  run.cmd  run.sh
src/: cli.rs  http_client.rs  main.rs  network_utils.rs  ui.rs  version_template.txt
website/: .htaccess.removed  health.json  index.html  modern.css  robots.txt  sitemap.xml  styles-v2.css  styles.css
website/v1/: index.html  styles-alt.css  styles.css
