[package]
name = "peek"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Peek - GUI + CLI HTTP inspector"
authors = ["Ropean", "Claude", "GPT-5 mini"]
homepage = "https://peek.aceapp.dev"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
eframe = { version = "0.25", features = ["default"] }
egui = "0.25"
egui_extras = { version = "0.25", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
trust-dns-resolver = "0.23"
anyhow = "1.0"
env_logger = "0.10"
hostname = "0.3"
local-ip-address = "0.6"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
image = { version = "0.24", default-features = false, features = ["ico", "png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[build-dependencies]
winres = "0.1"
